# crude-ml

./: .gitignore  README.md  example.py  pyproject.toml
helpers/: linalg.py  linear_models.py
